# fastapi_server

./: .gitignore  logging.ini  main.py  pyproject.toml  readme.md  requirements.txt
alembic/: env.py
alembic/versions/: ae2c700ff943_film_site.py  ca160dda40e0_user.py
anime/: anime_controller.py  anime_dao.py  anime_vod.py  controller.py
app/: configer.py  handler.py  router.py
config/: __init__.py  config.py  constant.py  data_config.py  database.py  env.py  privide_config.py  security_config.py
controller/: CronController.py  banner.py  collect.py  collect_controller.py  config.py  cron.py  detail.py  film.py  film_controller.py  index.py  index_controller.py  manage.py  manage_controller.py  record.py  spider.py  spider_controller.py  user.py  user_controller.py
dao/: base_dao.py
dao/collect/: MacTypeDao.py  MacVodDao.py  categories.py  collect_source.py  kv_dao.py  movie_dao.py  multiple_source.py
dao/system/: failure_record.py  file_upload.py  manage.py  movies.py  search.py  search_mac_vod.py  search_tag.py  user_dao.py
demo/: sql.py
exceptions/: handle.py
logic/: collect_logic.py  film_logic.py  index_logic.py  manage_logic.py  spider_logic.py  user_logic.py
model/collect/: MacType.py  MacVod.py  categories.py  collect_source.py  (+2 more)
service/: collect_logic.py  film_logic.py  index_logic.py  manage_logic.py  spider_logic.py  user_logic.py
sql/: mac_type-pg.sql  mac_type.xls
test/: anime_api.http  base_dao_test.py  category_test.py  db_test.py  env_test.py  film.http  movie_detail_test.py
utils/: get_scheduler.py  log_util.py  page_util.py
(+55 files in other folders)
